base/todo-api/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: todo-api
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
    - name: http
      port: 8010
      targetPort: http
      protocol: TCP
